--- a/samples/exercise12.html
+++ b/samples/exercise12.html
@@ -20,6 +20,8 @@
           <li>Bonus videos (e.g. Mailchimp, Woocommerce)</li>
           <li>Live instructional webinars</li>
           <li>Real human support</li>
+          <li>Live instructional webinars</li>
+          <li>Real human support</li>
         </ul>
         <button>Join Waitlist</button>
       </div>
